<resources>
    <string name="app_name">AR Companion</string>
    <string name="definition"><u>Definition</u></string>
    <string name="example"><u>Example</u></string>
    <string name="problem">Whenever we read a physical book, the frequency with which we google words for their definitions is a massive loss of time and is extremely inefficient. It also results in the reader’s attention to waver.</string>
    <string name="solution">It is pretty easy!!. You just have to take a picture of the book page, and keep tapping on the words you want to find the meaning of. We use Firebase in the background to extract text, and Oxford API to find the meaning of the word.</string>
    <string name="AR">Okay, this one is a really cool feature we are currently working on! You can plot the AR Model of the word in your environment in real-time. We have a limited number of supported words right now, so the feature won\'t work for all the words you are trying to search for.</string>
    <string name="behind_the_screen">Interested in what goes behind the screen??</string>
    <string name="frontend1">This app is written purely in kotlin. We used jetpack libraries such as Retrofit, CameraX, DataBinding, etc. We used MVVM architectural pattern for the separation of the development of the graphical user interface. </string>
    <string name="frontend2">For the design part, We used Material design 3 components. The font family is apercu. And the app design is highly inspired from HeadSpace Android app </string>
    <string name="backend1">We are using Firebase ML Kit for text extraction, Oxford API to find the meaning of the word, ARCore to plot the AR models, Wikipedia API </string>
    <string name="backend2">Other libraries include Coil, OkHttp, Picasso, Guava, etc </string>
    <string name="catalystuff"><a href="https://www.freepik.com/free-vector/cute-astronaut-holding-flag-moon-cartoon-vector-icon-illustration-science-technology-icon-concept-isolated-premium-vector-flat-cartoon-style_22383468.htm#query=astronaut&amp;position=0&amp;from_view=search">Image by catalyststuff</a> on Freepik</string>
    <string name="aboutUs1">We are a group of college students and young professionals who care about our community and the world. Currently, we are experimenting with different stuff.  </string>
    <string name="aditya">Hi, I\'m Aditya, an Android Developer, who loves exploring different stuff. Currently I\'m a 4th year ISE student @NIE.</string>
    <string name="tuba">I\'m Tuba, a final year ISE student @NIE. I\'m a very fun loving person. I love travelling and drawing the most.</string>
    <string name="sohail">I am Sohail, currently a sophomore @NIE. I love Web Development, Open-Source Contribution and learning new technologies</string>
    <string name="rahul">I\'m Rahul Raj, a final year ISE student @NIE. Im a full stack web developer and ML enthusiast. </string>
    <string name="title_activity_pdf_viewer">PdfViewerActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="library_tab_text_1">Your Books</string>
    <string name="library_tab_text_2">Shelves</string>
    <string name="library_tab_text_3">Series</string>
    <string name="_404_not_found_image">404 not found image</string>
    <string name="permission_declined_alert_title">Oops!</string>
    <string name="permission_declined_alert_description">Wee need accesss to your local files in order to fetch the books for you ;-;</string>
    <string name="keyword_home_screen">Home Screen</string>
    <string name="keyword_give_permission">Give Permission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

