<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040726"

    tools:context=".activities.TechStackActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_margin="32dp"
                android:padding="16dp"
                app:srcCompat="@drawable/astronaut_with_computer" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/apercu_pro_bold"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="Hello Geeks!!" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textColor="#B2B2B2"
                android:textSize="16sp"
                app:fontFamily="@font/apercu_pro_regular"
                android:text="@string/behind_the_screen" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Frontend"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/frontend1"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/frontend2"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/kotlin"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/jetpack"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/material"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/headspace"/>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backendCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Backend"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/backend1"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/backend2"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/firebase"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/arcore"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/oxford"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"
                            app:srcCompat="@drawable/wikipedia"/>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/app_theme_color"
        app:itemIconTint="@color/bottom_tab_item_foreground"
        app:itemTextColor="@color/bottom_tab_item_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>